# waiig

./: .gitignore  main.go
_solutions/02/src/monkey/parser/: parser.go
_solutions/03/src/monkey/lexer/: lexer.go  lexer_test.go
_solutions/04/src/monkey/lexer/: lexer.go  lexer_test.go
_solutions/04/src/monkey/parser/: parser.go
ast/: ast.go
cpp/: .clang-format  CMakeLists.txt
cpp/lib/: ast.cpp  evaluator.cpp  lexer.cpp  monkey.cpp  object.cpp  parser.cpp  repl.cpp  token.cpp
cpp/lib/include/monkey/: ast.h  evaluator.h  lexer.h  monkey.h  object.h  parser.h  repl.h  token.h
cpp/test/: enums.h  evaluator_test.cpp  init.h  lexer_test.cpp  parser_test.cpp  repl_test.cpp
cpp/x/: run  watch
evaluator/: builtins.go  evaluator.go  evaluator_test.go
go/_old/fixtures/: 01.mnk
go/_old/lexer/: lexer.go  lexer_test.go
go/_old/token/: token.go
lexer/: lexer.go  lexer2.go  lexer_test.go
object/: object.go
parser/: parser.go  parser_test.go
rs/: Cargo.toml
rs/src/: ast.rs  lexer.rs  main.rs  parser.rs  repl.rs  token.rs
rs/x/: run  watch
token/: token.go
